# pytorch_tutorial

./: .gitignore  README.md  pyproject.toml  tutorial_linear_regression.ipynb  tutorial_mdn.ipynb  tutorial_mnist.ipynb  tutorial_regression.ipynb
.github/: copilot-instructions.md
src/mnist_tutorial/: __init__.py  data.py  model.py  train.py
