[project]
name = "pytorch-mnist-tutorial"
version = "0.1.0"
description = "A uv-managed PyTorch tutorial project for training an MNIST classifier."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.8",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[project.scripts]
mnist-train = "mnist_tutorial.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnist_tutorial"]

[tool.uv]
package = true
